improves and fixes sizes and alignment of images and links

--- a/assets/sass/basic.scss
+++ b/assets/sass/basic.scss
@@ -48,6 +48,18 @@ a {
       color: themed("color-accent");
     }
   }
+
+  figure, figcaption {
+    @include themify(){
+      color: themed("text-color");
+    }    
+    
+    &:hover{
+      @include themify(){
+        color: themed("text-color");
+      }
+    }
+  }
 }
 
 h1 {
@@ -90,6 +102,7 @@ img {
 figure {
   &.smallSquare, &.small {
     img {
+      margin: 0 auto;
       max-width: 300px;
       max-height: 300px;
     }
@@ -97,6 +110,7 @@ figure {
 
   &.big {
     img {
+      margin: 0 auto;
       max-width: 750px;
       max-height: 600px;
     }
@@ -104,6 +118,7 @@ figure {
 
   &.bigSquare {
     img {
+      margin: 0 auto;
       max-width: 750px;
       max-height: 750px;
     }
@@ -111,6 +126,7 @@ figure {
 
   &.noborder {
     img {
+      margin: 0 auto;
       border: 0px;
       border-radius: 0;
     }
